Added implementations of all controllers
