# backend/src/swagger/swagger.json
@@ -132,7 +132,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "password": {
+                "id": {
+                  "example": "userId"
+                },
+                "newPassword": {
                   "example": "any"
                 }
               }
@@ -303,6 +306,14 @@
     "/api/products/": {
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "X-Token",
+            "type":"string",
+            "required":true
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -374,6 +385,14 @@
     "/api/brand/": {
       "get": {
         "description": "",
+        "parameters":[
+          {
+            "in": "header",
+            "name": "X-Token",
+            "type":"string",
+            "required":true
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -382,6 +401,32 @@
       },
       "post": {
         "description": "",
+        "parameters":[
+          {
+            "in": "header",
+            "name": "X-Token",
+            "type":"string",
+            "required":true
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "logo": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -397,10 +442,34 @@
         "description": "",
         "parameters": [
           {
+            "in": "header",
+            "name": "X-Token",
+            "type":"string",
+            "required":true
+          },
+          {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "logo": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -412,6 +481,12 @@
       "delete": {
         "description": "",
         "parameters": [
+          {
+            "in": "header",
+            "name": "X-Token",
+            "type":"string",
+            "required":true
+          },
           {
             "name": "id",
             "in": "path",
@@ -429,6 +504,14 @@
     "/api/category/": {
       "get": {
         "description": "",
+        "parameters":[
+          {
+            "in": "header",
+            "name": "X-Token",
+            "type":"string",
+            "required":true
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -437,6 +520,32 @@
       },
       "post": {
         "description": "",
+        "parameters":[
+          {
+            "in": "header",
+            "name": "X-Token",
+            "type":"string",
+            "required":true
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "Image": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -452,10 +561,34 @@
         "description": "",
         "parameters": [
           {
+            "in": "header",
+            "name": "X-Token",
+            "type":"string",
+            "required":true
+          },
+          {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "logo": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -467,6 +600,12 @@
       "delete": {
         "description": "",
         "parameters": [
+          {
+            "in": "header",
+            "name": "X-Token",
+            "type":"string",
+            "required":true
+          },
           {
             "name": "id",
             "in": "path",
@@ -484,6 +623,14 @@
     "/api/subcategory/": {
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "X-Token",
+            "type":"string",
+            "required":true
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -492,6 +639,32 @@
       },
       "post": {
         "description": "",
+        "parameters":[
+          {
+            "in": "header",
+            "name": "X-Token",
+            "type":"string",
+            "required":true
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "category": {
+                  "example": "Id of parent category"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -507,10 +680,34 @@
         "description": "",
         "parameters": [
           {
+            "in": "header",
+            "name": "X-Token",
+            "type":"string",
+            "required":true
+          },
+          {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "category": {
+                  "example": "Id of parent category"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -522,6 +719,12 @@
       "delete": {
         "description": "",
         "parameters": [
+          {
+            "in": "header",
+            "name": "X-Token",
+            "type":"string",
+            "required":true
+          },
           {
             "name": "id",
             "in": "path",
@@ -539,6 +742,14 @@
     "/api/review/": {
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "X-Token",
+            "type":"string",
+            "required":true
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -547,6 +758,35 @@
       },
       "post": {
         "description": "",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "X-Token",
+            "type":"string",
+            "required":true
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "text": {
+                  "example": "the review body"
+                },
+                "productId": {
+                  "example": "the ID of the product under review"
+                },
+                "userId": {
+                  "example": "Id of the user reviewing the product"
+                },
+                "rate":{
+                  "example": "the rate (number between 1 and 5)"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -562,10 +802,37 @@
         "description": "",
         "parameters": [
           {
+            "in": "header",
+            "name": "X-Token",
+            "type":"string",
+            "required":true
+          },
+          {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "text": {
+                  "example": "the review body"
+                },
+                "productId": {
+                  "example": "the ID of the product under review"
+                },
+                "userId": {
+                  "example": "Id of the user reviewing the product"
+                },
+                "rate":{
+                  "example": "the rate (number between 1 and 5)"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -577,6 +844,12 @@
       "delete": {
         "description": "",
         "parameters": [
+          {
+            "in": "header",
+            "name": "X-Token",
+            "type":"string",
+            "required":true
+          },
           {
             "name": "id",
             "in": "path",
